# MicroMarketFastAPI

./: crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2024_10_05_1315-c5c7d109ff52_create_products_table.py  2024_10_05_1333-ff5bf35c4ba8_create_users_table.py  2024_10_05_1344-38a60c587756_create_posts_table.py  2024_10_05_1431-9f46547971af_create_profile_table.py  2024_10_05_1730-7452a29be906_create_orders_table.py  2024_10_05_1752-763a4dee2121_create_order_product_association_table.py  2024_10_05_2009-0ce302f14036_add_new_column_to_oreder_product.py  2024_10_05_2037-37448980abef_add_column_unit_price.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  oder_product_association.py  order.py  post.py  product.py  profile.py  user.py
users/: schemas.py
