[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["BIRZHAN <birzhan981@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
